:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::

2019-07-23 : Branch: branches/rel-0.15 created to investigate import problems: bugs#366

Changes Since 0.15
==================

* General

  - Dropped support for Python 2.6, 3.3 and 3.4 (work in progress).
  - Keep `backslash escapes`__ in the document tree. Backslash characters in
    text are be represented by NULL characters in the ``text`` attribute of
    Doctree nodes and removed in the writing stage by the node's
    ``astext()`` method.

  __ http://docutils.sourceforge.net/docs/ref/rst/restructuredtext.html#escaping-mechanism

* docutils/utils/__init__.py

  - unescape() definition moved to `nodes` to avoid circular import
    dependency. Fixes [ 366 ].

* docutils/transforms/universal.py

  - Fix [ 332 ]: Standard backslash escape for smartquotes.
  - Fix [ 342 ]: No escape in roles descending from `inline literal`.

* docutils/statemachine.py

  - Patch [ 158 ]: Speed up patterns by saving compiled versions (eric89gxl)

* docutils/writers/odf_odt/__init__.py:

  - Fix: ElementTree.getchildren deprecated warning

* docutils/writers/manpage.py

  - Apply fix for [ 289 ], line starting with ``.`` in a text.

* test/alltests.py

  - Fix: 377 ResourceWarning: unclosed file python3.8
    Close alltests.out with atexit.

* test/functional/tests/* 

  - Fix: 377 ResourceWarning: unclosed file python3.8
    Read defaults file with context.

* test/test_io.py:

  - Apply patch #157: avoid test failure because of a ``ResourceWarning``.

* test/test_writers/test_odt.py:

  - Fix [ 359 ]: Test suite failes on Python 3.8. odt xml sorting.
    Use ElementTree instead of minidom.  

Release 0.15.1 (2019-07-24)
===========================

source: branches/rel-0.15

Bugs #366 fix release for python2 only.


Release 0.15 (2019-07-20)
=========================

* General
